--- a/public/main.css
+++ b/public/main.css
@@ -2,3 +2,37 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Helvetica, Arial, sans-serif;
   background-color: #1E1E1E 
 }
+.svg-container {
+  background-color: #423D3D;
+  border: 1px solid gray;
+}
+
+svg > g > line{
+  stroke-dasharray: 0 150;
+  animation: dash 2s ease-out forwards;
+}
+
+
+@keyframes dash {
+  from {
+    stroke-dasharray: 0 300;
+  }
+  to {
+    stroke-dasharray: 300 300;
+  }
+}
+
+
+.loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
