--- a/public/main.css
+++ b/public/main.css
@@ -24,12 +24,14 @@ svg > g > line{
 
 
 .loader {
-  border: 16px solid #f3f3f3; /* Light grey */
-  border-top: 16px solid #3498db; /* Blue */
+  border: 7px solid #f3f3f3; 
+  border-top: 7px solid #70F9FC; 
   border-radius: 50%;
-  width: 120px;
-  height: 120px;
-  animation: spin 2s linear infinite;
+  width: 70px;
+  height: 70px;
+  animation: spin .5s linear infinite;
+  position: absolute;
+  top: 40%;
 }
 
 @keyframes spin {
